@@ -20,6 +20,7 @@
 #include "SAPI.h"
 #include "zend_exceptions.h"
 #include "basic_functions.h"
+#include "zend_enum.h"
 
 static void php_url_encode_scalar(zval *scalar, smart_str *form_str,
 	int encoding_type, zend_ulong index_int,
@@ -56,6 +57,7 @@ static void php_url_encode_scalar(zval *scalar, smart_str *form_str,
 	}
 	smart_str_appendc(form_str, '=');
 
+try_again:
 	switch (Z_TYPE_P(scalar)) {
 		case IS_STRING: {
 			zend_string *encoded_data;
@@ -90,6 +92,14 @@ static void php_url_encode_scalar(zval *scalar, smart_str *form_str,
 		case IS_TRUE:
 			smart_str_appendc(form_str, '1');
 			break;
+		case IS_OBJECT:
+			ZEND_ASSERT(Z_OBJCE_P(scalar)->ce_flags & ZEND_ACC_ENUM);
+			if (Z_OBJCE_P(scalar)->enum_backing_type == IS_UNDEF) {
+				zend_value_error("Unbacked enum %s cannot be converted to a string", ZSTR_VAL(Z_OBJCE_P(scalar)->name));
+				return;
+			}
+			scalar = zend_enum_fetch_case_value(Z_OBJ_P(scalar));
+			goto try_again;
 		/* All possible types are either handled here or previously */
 		EMPTY_SWITCH_DEFAULT_CASE();
 	}
@@ -154,7 +164,9 @@ PHPAPI void php_url_encode_hash_ex(HashTable *ht, smart_str *formstr,
 		}
 
 		ZVAL_DEREF(zdata);
-		if (Z_TYPE_P(zdata) == IS_ARRAY || Z_TYPE_P(zdata) == IS_OBJECT) {
+		if (Z_TYPE_P(zdata) == IS_ARRAY
+		 || (Z_TYPE_P(zdata) == IS_OBJECT
+		  && !(Z_OBJCE_P(zdata)->ce_flags & ZEND_ACC_ENUM))) {
 			zend_string *new_prefix;
 			if (key) {
 				zend_string *encoded_key;
@@ -232,6 +244,11 @@ PHP_FUNCTION(http_build_query)
 		Z_PARAM_STR_OR_NULL(arg_sep)
 		Z_PARAM_LONG(enc_type)
 	ZEND_PARSE_PARAMETERS_END();
+
+	if (UNEXPECTED(Z_TYPE_P(formdata) == IS_OBJECT && (Z_OBJCE_P(formdata)->ce_flags & ZEND_ACC_ENUM))) {
+		zend_argument_type_error(1, "must be of type array, %s given", zend_zval_value_name(formdata));
+		RETURN_THROWS();
+	}
 
 	php_url_encode_hash_ex(HASH_OF(formdata), &formstr, prefix, prefix_len, /* key_prefix */ NULL, (Z_TYPE_P(formdata) == IS_OBJECT ? formdata : NULL), arg_sep, (int)enc_type);
 
