@@ -44,6 +44,9 @@ PHP                                                                        NEWS
   . Fixed bug GH-15711 (SoapClient can't convert BackedEnum to scalar value).
     (nielsdos)
 
+- Standard:
+  . Add support for backed enums in http_build_query(). (ilutov)
+
 12 Sep 2024, PHP 8.4.0beta5
 
 - BCMath:
